# gentup

./: Cargo.toml  README.md
src/: .portage.rs.swo  args.rs  check_distro.rs  chevrons.rs  config.rs  linux.rs  mail.rs  main.rs  portage.rs  prompt.rs  refactor  rotational.rs  system_command.rs  tabulate.rs  typedefs.rs  version.rs
src/.maildir/: .mu-prop
