[package]
name = "gentup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filetime = "0.2"
chrono = "0.4.31"
clearscreen = "2.0.1"
execute = "0.2.13"

[profile.release]
lto = true
strip = true
opt-level = "z"
