[package]
name = "gentup"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filetime = "0.2"
chrono = "0.4.31"
crossterm = "0.27.0"
execute = "0.2.13"

[profile.release]
lto = true
strip = true
opt-level = "z"
